Méthode de création de l'objet dans objetService

--- a/src/main/resources/templates/jeu.html
+++ b/src/main/resources/templates/jeu.html
@@ -8,6 +8,7 @@
 <body>
     <div class="container" >
         <p th:text="${ressource.nom}"></p>
+        <p th:text="${objet.nom}"></p>
     </div>
     
 </body>
