--- a/src/main/resources/templates/jeu.html
+++ b/src/main/resources/templates/jeu.html
@@ -6,9 +6,13 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container" >
+    <!-- <div class="container" >
         <p th:text="${ressource.nom}"></p>
-    </div>
-    
+    </div> -->
+    <form action="/recolte" method="post">
+        
+        <input type="submit"/>
+
+    </form>
 </body>
 </html>
