--- a/src/main/resources/templates/inscription.html
+++ b/src/main/resources/templates/inscription.html
@@ -2,37 +2,41 @@
 <html xmlns:th="http://www.thymeleaf.org">
    <head>
       <meta charset="UTF-8" />
-      <title>Add Person</title>
+      <title>Bob le Bricoleur</title>
+      <link rel="stylesheet" href="style.css"/>
    </head>
    
    <body>
-   <h1>Articles</h1>
-   <hr>
-	<a href="http://localhost:8080/inscription">Connexion</a>
-   <br><br>
-	<form action="#" th:action="@{/inscription}" th:object="${personnage}" method="post">
+   <h1>Inscription</h1>
+   <br>
+	<a href="connexion.html">Connexion</a>
+	<br><br>
+   <form action="#" th:action="@{/inscription}" th:object="${personnage}" method="post">
 	
-		<label for='name'>Mail</label><br>
-  		<input type='email' name='name' th:field="*{name}"><br>
+		<label for='mail'>Mail</label><br>
+  		<input type='email' name='mail' id='mail' th:field="*{mail}"><br>
       <br>
 	 	<label for='password'>Mot de passe </label><br>
-  		<input type='password' name='password' th:field="*{password}"><br>
+  		<input type='password' name='password' id='password' th:field="*{password}"><br>
       <br>
       <label for='name'>Nom de votre personnage</label><br>
-  		<input type='email' name='name' th:field="*{name}"><br>
-      <br>
+  		<input type='text' name='name' id='name' th:field="*{name}"><br>
 
-      <legend>Choisissez le genre de votre personnage</legend>
-      <input type="radio" id="feminin" name="sexe" value="2">
+      <input type="radio" id="feminin" name="sexe" value="2" th:field="*{sexe}">
       <label for="feminin">Féminin</label>
       <br>
 
-      <input type="radio" id="masculin" name="sexe" value="1">
+      <input type="radio" id="masculin" name="sexe" value="1" th:field="*{sexe}">
       <label for="masculin">Masculin</label>
-
+      <br><br>
+      <div>
+         <p>Avatar</p>
+         <img src="img/femme.png" alt="avatar femme">
+         <img src="img/homme.png" alt="avatar femme">
+      </div>
       <br>
       <br>
-  		<input type='submit' value='Submit'>
+  		<button type='submit'>C'est parti !</button>
   		
 	</form>
    </body>
