--- a/src/main/resources/templates/connexion.html
+++ b/src/main/resources/templates/connexion.html
@@ -3,18 +3,21 @@
    <head>
       <meta charset="UTF-8" />
       <title>Bob le Bricoleur</title>
-      <link rel="stylesheet" href="../static/style.css"/>
+      <link rel="stylesheet" href="style.css"/>
+      <link rel="shortcut icon" type="image/gif" href="img/house.png"/>
    </head>
    
    <body>
    <h1>Connexion</h1>
    <br>
-	<a href="inscription.html">Inscription</a>
-	<br><br>
-   <form action="#" th:action="@{/inscription}" th:object="${personnage}" method="post">
+   <form action="#" th:action="@{/new_inscription}" method="post">
+	   <button id="inscription" type="submit">Inscription</button>
+   </form>
+	<br>
+   <form action="#" th:action="@{/se_connecter}" th:object="${personnage}" method="post">
 	
-		<label for='name'>Mail</label><br>
-  		<input type='email' name='name' th:field="*{name}"><br>
+		<label for='mail'>Mail</label><br>
+  		<input type='email' name='mail' th:field="*{mail}"><br>
       <br>
 	 	<label for='password'>Mot de passe </label><br>
   		<input type='password' name='password' th:field="*{password}"><br>
