--- a/src/main/resources/templates/partie.html
+++ b/src/main/resources/templates/partie.html
@@ -4,24 +4,32 @@
       <meta charset="UTF-8" />
       <title>Bob le Bricoleur</title>
       <link rel="stylesheet" href="style.css"/>
+      <link rel="icon" type="image/gif" href="img/house.png"/>
+
    </head>
    
    <body>
    <h1>Partie</h1>
    <br>
-	<a href="connexion.html">Déconnexion</a>
-	<br><br>
+   <form action="#" th:action="@{/accueil_inscription}" method="post">
+	   <button id="deconnexion" type="submit">Déconnexion</button>
+   </form>
+	<br>
 
 
    <div>
-		<h2>Bienvenue <span>inconnu</span></h2>
-        <div>
+		<h2>Bienvenue <span th:text="${personnage.name}">inconnu</span></h2>
+        <div id="infosP">
             <p id="perso">Votre personnage :</p>
             <p th:text="${personnage.mail}">Mail inconnu</p>
             <p th:if="${personnage.sexe == 1}">Sexe masculin</p>
             <p th:if="${personnage.sexe == 2}">Sexe féminin</p>
-            <p th:text="${personnage.name}">Nom inconnu</p>
-            <img src="img/femme.png" alt="">
+            <div th:if="${personnage.sexe == 1}">
+               <img src="img/homme.png" alt="">
+            </div>
+            <div th:if="${personnage.sexe == 2}">
+               <img src="img/femme.png" alt="">
+            </div>
         </div>
         <br>
         <a href="compte.html">Gérer mon compte</a>
