--- a/src/main/resources/templates/partie.html
+++ b/src/main/resources/templates/partie.html
@@ -5,13 +5,12 @@
       <title>Bob le Bricoleur</title>
       <link rel="stylesheet" href="style.css"/>
       <link rel="icon" type="image/gif" href="img/house.png"/>
-
    </head>
    
    <body>
    <h1>Partie</h1>
    <br>
-   <form action="#" th:action="@{/accueil_inscription}" method="post">
+   <form action="#" th:action="@{/accueil_connexion}" method="post">
 	   <button id="deconnexion" type="submit">Déconnexion</button>
    </form>
 	<br>
@@ -19,20 +18,28 @@
 
    <div>
 		<h2>Bienvenue <span th:text="${personnage.name}">inconnu</span></h2>
-        <div id="infosP">
-            <p id="perso">Votre personnage :</p>
-            <p th:text="${personnage.mail}">Mail inconnu</p>
-            <p th:if="${personnage.sexe == 1}">Sexe masculin</p>
-            <p th:if="${personnage.sexe == 2}">Sexe féminin</p>
-            <div th:if="${personnage.sexe == 1}">
-               <img src="img/homme.png" alt="">
-            </div>
-            <div th:if="${personnage.sexe == 2}">
-               <img src="img/femme.png" alt="">
-            </div>
-        </div>
-        <br>
-        <a href="compte.html">Gérer mon compte</a>
+         <div id="infosP">
+               <p id="perso">Votre personnage :</p>
+               <p th:text="${personnage.mail}">Mail inconnu</p>
+               <p th:if="${personnage.sexe == 1}">Sexe masculin</p>
+               <p th:if="${personnage.sexe == 2}">Sexe féminin</p>
+               <div th:if="${personnage.sexe == 1}">
+                  <img src="img/homme.png" alt="">
+               </div>
+               <div th:if="${personnage.sexe == 2}">
+                  <img src="img/femme.png" alt="">
+               </div>
+         </div>
+         <br>
+         <div id="play_game">
+            <form action="#" th:action="@{/gestion_compte}" method="post">
+               <button id="gestion" type="submit">Gérer mon compte</button>
+            </form>
+            <form action="#" th:action="@{/play_game}" method="post">
+               <button id="gestion" type="submit">Jouer</button>
+            </form>
+         </div>
+   
    </div>
    </body>
 </html>
