--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,13 +14,14 @@
 	   <button id="inscription" type="submit">Inscription</button>
    </form>
 	<br>
-   <form action="#" th:action="@{/se_connecter}" th:object="${personnage}" method="post">
+   
+   <form th:action='@{/login}' action="#" method="post">
 	
-		<label for='mail'>Mail</label><br>
-  		<input type='email' name='mail' th:field="*{mail}"><br>
+		<label for='email'>Mail</label><br>
+  		<input type='email' name='username'><br>
       <br>
 	 	<label for='password'>Mot de passe </label><br>
-  		<input type='password' name='password' th:field="*{password}"><br>
+  		<input type='password' name='password'><br>
 
       <br>
   		<button type='submit'>C'est parti !</button>
