--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,11 +17,11 @@
    
    <form th:action='@{/login}' action="#" method="post">
 	
-		<label for='email'>Mail</label><br>
-  		<input type='email' name='username'><br>
+		<label for='mail'>Mail</label><br>
+  		<input type='email' name='username' id="mail"><br>
       <br>
 	 	<label for='password'>Mot de passe </label><br>
-  		<input type='password' name='password'><br>
+  		<input type='password' name='password' id="password"><br>
 
       <br>
   		<button type='submit'>C'est parti !</button>
