--- a/src/main/resources/templates/jeu.html
+++ b/src/main/resources/templates/jeu.html
@@ -9,9 +9,9 @@
     <!-- <div class="container" >
         <p th:text="${ressource.nom}"></p>
     </div> -->
-    <form action="/recolte" method="post">
-        <input type="hidden" name="id" value="8" />
-        <input type="hidden" name="pv" value="15" />
+    <form th:action="${/recolte}" action="#" method="post" th:object="${dto}">
+        <input type="input" name="id" value="8" />
+        <input type="input" name="pv" value="15" />
         <input type="submit" value="Arbre" />
 
     </form>
