Page d'accueil liée aux autres templates + controller créé

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -80,3 +80,12 @@ h2{
     padding: 2%;
     width: 54%;
 }
+
+article{
+    color: #99B800;
+    font-size: x-large;
+}
+
+.imgHome{
+    margin-top: 0%;
+}
