--- a/src/main/resources/templates/compte.html
+++ b/src/main/resources/templates/compte.html
@@ -9,7 +9,12 @@
    </head>
    
    <body>
-   <h1>Partie</h1>
+    <h1>
+        <form action="#" th:action="@{/go_home3}" method="post" id="flogo">
+           <button id="btnlogo" type="submit"><img src="img/house.png" alt="house" class="imgHome" id="logo"></button>
+        </form>
+        <span>Connexion</span>
+    </h1>
    <br>
    <form action="#" th:action="@{/accueil_connexion}" method="post">
 	   <button id="deconnexion" type="submit">Déconnexion</button>
