--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,7 +8,12 @@
     </head>
    
     <body>
-        <h1>Bob le Bricoleur</h1>
+        <h1>
+            <form action="#" th:action="@{/go_home}" method="post" id="flogo">
+               <button id="btnlogo" type="submit"><img src="img/house.png" alt="house" class="imgHome" id="logo"></button>
+            </form>
+            <span>Bob le Bricoleur</span>
+        </h1>
         <br>
         <br>
             <article>Un jeu familial pour toute la famille !</article>
