--- a/src/main/resources/templates/inscription.html
+++ b/src/main/resources/templates/inscription.html
@@ -9,7 +9,12 @@
    </head>
    
    <body>
-   <h1>Inscription</h1>
+   <h1>
+      <form action="#" th:action="@{/go_home2}" method="post" id="flogo">
+         <button id="btnlogo" type="submit"><img src="img/house.png" alt="house" class="imgHome" id="logo"></button>
+      </form>
+      <span>Inscription</span>
+   </h1>
    <br>
    <form action="#" th:action="@{/new_connexion}" method="post">
 	   <button id="connexion" type="submit">Connexion</button>
