--- a/src/main/resources/templates/jeu.html
+++ b/src/main/resources/templates/jeu.html
@@ -12,7 +12,7 @@
     <!-- <div class="container" >
         <h2>Bienvenue <span th:text="${personnage.name}">inconnu</span></h2>
     </div> -->
-    <div th:if="${oRDto != null}">
+    <!-- <div th:if="${oRDto != null}">
         <div th:if="${oRDto.pv == 0}">
             <p id="infosP">L'arbre est tombé</p>
         </div>
@@ -28,6 +28,18 @@
     <div th:unless="${oRDto != null}">
         <form th:action="@{/recolte}" action="#" method="post">
             <input type="hidden" name="id" value="8" />
+            <input type="submit" value="Arbre" />
+
+        </form>
+    </div> -->
+
+    <div th:if="${tab[0].pv == 0}">
+        <p id="infosP">L'arbre est tombé</p>
+    </div>
+    <div th:unless="${tab[0].pv == 0}">
+        <form th:action="@{/recolte}" action="#" method="post" th:object="${tab[0]}">
+            <p th:text="*{pv}"></p>
+            <input type="hidden" name="index" value="0" />
             <input type="submit" value="Arbre" />
 
         </form>
