--- a/src/main/resources/templates/jeu.html
+++ b/src/main/resources/templates/jeu.html
@@ -33,13 +33,25 @@
         </form>
     </div> -->
 
-    <div th:if="${tab[0].pv == 0}">
+    <div th:if="${tabObjetRecoltableDTO.getObjetsRecoltables(0).pv == 0}">
         <p id="infosP">L'arbre est tombé</p>
     </div>
-    <div th:unless="${tab[0].pv == 0}">
-        <form th:action="@{/recolte}" action="#" method="post" th:object="${tab[0]}">
-            <p th:text="*{pv}"></p>
+    <div th:unless="${tabObjetRecoltableDTO.getObjetsRecoltables(0).pv == 0}">
+        <form th:action="@{/recolte}" action="#" method="post" th:object="${tabObjetRecoltableDTO}">
+            <p th:text="*{getObjetsRecoltables(0).pv}"></p>
             <input type="hidden" name="index" value="0" />
+            <input type="submit" value="Arbre" />
+
+        </form>
+    </div>
+
+    <div th:if="${tabObjetRecoltableDTO.getObjetsRecoltables(1).pv == 0}">
+        <p id="infosP">L'arbre est tombé</p>
+    </div>
+    <div th:unless="${tabObjetRecoltableDTO.getObjetsRecoltables(1).pv == 0}">
+        <form th:action="@{/recolte}" action="#" method="post" th:object="${tabObjetRecoltableDTO}">
+            <p th:text="*{getObjetsRecoltables(1).pv}"></p>
+            <input type="hidden" name="index" value="1" />
             <input type="submit" value="Arbre" />
 
         </form>
