--- a/src/main/resources/templates/jeu.html
+++ b/src/main/resources/templates/jeu.html
@@ -9,29 +9,9 @@
 </head>
 
 <body>
-    <!-- <div class="container" >
+    <div class="container" >
         <h2>Bienvenue <span th:text="${personnage.name}">inconnu</span></h2>
-    </div> -->
-    <!-- <div th:if="${oRDto != null}">
-        <div th:if="${oRDto.pv == 0}">
-            <p id="infosP">L'arbre est tombé</p>
-        </div>
-        <div th:unless="${oRDto.pv == 0}">
-            <form th:action="@{/recolte}" action="#" method="post" th:object="${oRDto}">
-                <p th:text="*{pv}"></p>
-                <input type="hidden" name="id" value="8" />
-                <input type="submit" value="Arbre" />
-
-            </form>
-        </div>
-    </div>
-    <div th:unless="${oRDto != null}">
-        <form th:action="@{/recolte}" action="#" method="post">
-            <input type="hidden" name="id" value="8" />
-            <input type="submit" value="Arbre" />
-
-        </form>
-    </div> -->
+   
 
     <div th:if="${tabObjetRecoltableDTO.getObjetsRecoltables(0).pv == 0}">
         <p id="infosP">L'arbre est tombé</p>
