--- a/src/main/resources/templates/jeu.html
+++ b/src/main/resources/templates/jeu.html
@@ -145,7 +145,7 @@
     </main>
     <script src="jeu.js"></script>
 
-    <div class="container" >
+    <!-- <div class="container" >
         <h2>Bienvenue <span th:text="${personnage.name}">inconnu</span></h2>
    
 
@@ -171,7 +171,7 @@
             <input type="submit" value="Arbre" />
 
         </form>
-    </div>
+    </div> -->
 </body>
 
 </html>
