correction des méthodes de récolte

--- a/src/main/resources/templates/jeu.html
+++ b/src/main/resources/templates/jeu.html
@@ -20,7 +20,7 @@
         <form th:action="@{/recolte}" action="#" method="post" th:object="${tabObjetRecoltableDTO}">
             <p th:text="*{getObjetsRecoltables(0).pv}"></p>
             <input type="hidden" name="index" value="0" />
-            <input type="submit" value="Arbre" />
+            <button type="submit" value="Arbre" >Arbre</button>
 
         </form>
     </div>
