commit before merge

--- a/src/main/resources/templates/Equiper.html
+++ b/src/main/resources/templates/Equiper.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,4 +9,4 @@
 <body>
     <p>L'objet a bien été équipé</p>
 </body>
-</html>
+</html> -->
