--- a/src/main/resources/templates/partie.html
+++ b/src/main/resources/templates/partie.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!-- <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
    <head>
       <meta charset="UTF-8" />
@@ -47,4 +47,4 @@
    
    </div>
    </body>
-</html>
+</html> -->
