--- a/src/main/resources/templates/AddInventaire.html
+++ b/src/main/resources/templates/AddInventaire.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,4 +9,4 @@
 <body>
     <p>L'objet a été ajouté à votre inventaire</p>
 </body>
-</html>
+</html> -->
