--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!-- <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8" />
@@ -32,4 +32,4 @@
             <img src="img/femme.png" alt="house" class="imgHome">
 
     </body>
-</html>
+</html> -->
