--- a/src/main/resources/templates/compte.html
+++ b/src/main/resources/templates/compte.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
    <head>
       <meta charset="UTF-8" />
@@ -25,8 +25,8 @@
    <div>
 		<h2>Bienvenue</h2>
         <div id="infosP">
-            Supprimer compte, modifier Mdp, modifier mail, modifier sexe, modifier nom-->
-            <!-- <p id="infos">Entrez les informations à valider</p>
+            Supprimer compte, modifier Mdp, modifier mail, modifier sexe, modifier nom
+            <p id="infos">Entrez les informations à valider</p>
             <div id="modif_infos">
                 <form action="#" th:action="@{/modif_sexe}">
                     <label>Sexe</label>
@@ -66,5 +66,5 @@
         </form>
 
     </div>
-   </body> -->
-<!-- </html> --> 
+   </body>
+</html>
